--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   </body>
 
   <footer>
+    Refresh the page to see the result <br>
     🎲 made with ❤️ by Premansh Chanderiya 🎲 
   </footer>
 </html>
